fixed x-scrollbar issue

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,13 @@
+
 body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  /* overflow-x: hidden; */
-  --triplet-width: calc(100vw / 3);
-  /* width: calc(100vw - 100px); */
-  --header-content-width: 46vw;
+  --triplet-width: calc(100% / 3);
+  --header-content-width: 46%;
   --header-content-height: calc(var(--header-content-width) * 0.65);
-  --header-img-width: 46vw;
-  --single-content-width: 55vw;
+  --header-img-width: 46%;
+  --single-content-width: 55%;
   background-color: rgb(240, 240, 240);
 }
 
@@ -192,10 +191,12 @@ input:-webkit-autofill {
 
 #header {
   display: flex;
-  width: 96vw;
+  /* width: 96vw; */
+  width: 96%;
   background-image: linear-gradient(to right, #f5faff, white);
   justify-content: space-between;
-  padding: 2vw;
+  /* padding: 2vw; */
+  padding: 2%;
 }
 
 #header-content {
@@ -284,7 +285,7 @@ input:-webkit-autofill {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 100vw;
+  width: 100%;
   padding: 1vw 0;
   background-color: #d76d52;
 }
@@ -302,7 +303,7 @@ input:-webkit-autofill {
 .triplet-section {
   display: flex;
   justify-content: space-evenly;
-  width: 100vw;
+  width: 100%;
   background-color: white;
 }
 
@@ -338,7 +339,7 @@ input:-webkit-autofill {
 
 .single-section {
   display: flex;
-  width: 100vw;
+  width: 100%;
   margin: 0 auto;
   padding: 2vw 0;
   justify-content: center;
@@ -387,7 +388,7 @@ input:-webkit-autofill {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   padding: 1vw 0;
   background-color: #d76d52;
 }
@@ -402,7 +403,7 @@ input:-webkit-autofill {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   height: 15vw;
   background-color: #d76d52;
   color: #8bc34a;
@@ -540,7 +541,7 @@ input:-webkit-autofill {
 #footer {
   display: flex;
   height: 15vw;
-  width: 100vw;
+  width: 100%;
   justify-content: center;
   align-items: center;
   font-size: 1.25vw;
